[package]
name = "tfhe-aes"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "0.11.2", features = ["boolean", "shortint", "integer", "noise-asserts", "experimental", "nightly-avx512"] }
rand = "0.9.0"
rand_chacha = "0.9.0"
aes = "0.8.4"
hex = "0.4.3"
rayon = "1.10.0"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry", "fmt", "ansi"] }
clap = { version = "4.5.28", features = ["derive"] }
anyhow = "1.0.95"

